# ml_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main.h  mnist.cpp  mnist.h
